sysy.output
Terminals unused in grammar

    FOR


State 183 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: ConstDecl
    2         | ConstDecl CompUnit
    3         | FuncType IDENT RestCompUnit
    4         | FuncType IDENT RestCompUnit CompUnit

    5 RestCompUnit: '(' ')' Block
    6             | '(' FuncFParams ')' Block
    7             | ';'
    8             | ',' VarDef ';'
    9             | '=' InitVal ';'
   10             | '=' InitVal ',' VarDef ';'
   11             | ConstArray ';'
   12             | ConstArray ',' VarDef ';'
   13             | ConstArray '=' InitVal ';'
   14             | ConstArray '=' InitVal ',' VarDef ';'

   15 FuncType: INT
   16         | VOID

   17 Block: '{' BlockItem '}'
   18      | '{' '}'

   19 Stmt: RETURN Exp ';'
   20     | RETURN ';'
   21     | LVal '=' Exp ';'
   22     | Exp ';'
   23     | ';'
   24     | Block
   25     | IF '(' Exp ')' Stmt
   26     | IF '(' Exp ')' Stmt ELSE Stmt
   27     | WHILE '(' Exp ')' Stmt
   28     | BREAK ';'
   29     | CONTINUE ';'

   30 Exp: LOrExp

   31 PrimaryExp: '(' Exp ')'
   32           | LVal
   33           | Number

   34 UnaryExp: PrimaryExp
   35         | UnaryOp UnaryExp
   36         | IDENT '(' ')'
   37         | IDENT '(' FuncRParams ')'

   38 MulExp: UnaryExp
   39       | MulExp MulOp UnaryExp

   40 AddExp: MulExp
   41       | AddExp AddOp MulExp

   42 RelExp: AddExp
   43       | RelExp RelOp AddExp

   44 EqExp: RelExp
   45      | EqExp EqOp RelExp

   46 LAndExp: EqExp
   47        | LAndExp AND EqExp

   48 LOrExp: LAndExp
   49       | LOrExp OR LAndExp

   50 Decl: ConstDecl
   51     | VarDecl

   52 ConstDecl: CONST BType ConstDef ';'

   53 ConstDef: IDENT '=' ConstInitVal
   54         | IDENT '=' ConstInitVal ',' ConstDef
   55         | IDENT ConstArray '=' ConstInitVal
   56         | IDENT ConstArray '=' ConstInitVal ',' ConstDef

   57 ConstInitVal: ConstExp
   58             | '{' ConstInitVals '}'

   59 ConstInitVals: ConstInitVal
   60              | ConstInitVal ',' ConstInitVals

   61 ConstExp: Exp

   62 BlockItem: Decl
   63          | Stmt
   64          | Decl BlockItem
   65          | Stmt BlockItem

   66 LVal: IDENT
   67     | IDENT Array

   68 VarDecl: BType VarDef ';'

   69 VarDef: IDENT
   70       | IDENT '=' InitVal
   71       | IDENT ',' VarDef
   72       | IDENT '=' InitVal ',' VarDef
   73       | IDENT ConstArray
   74       | IDENT ConstArray '=' InitVal
   75       | IDENT ConstArray ',' VarDef
   76       | IDENT ConstArray '=' InitVal ',' VarDef

   77 InitVal: Exp
   78        | '{' InitVals '}'

   79 InitVals: InitVal
   80         | InitVal ',' InitVals

   81 FuncFParams: FuncFParam
   82            | FuncFParam ',' FuncFParams

   83 FuncFParam: BType IDENT

   84 FuncRParams: Exp
   85            | Exp ',' FuncRParams

   86 ConstArray: '[' ConstExp ']'
   87           | '[' ConstExp ']' ConstArray

   88 Array: '[' Exp ']'
   89      | '[' Exp ']' Array

   90 BType: INT

   91 Number: INT_CONST

   92 UnaryOp: PLUS
   93        | MINUS
   94        | NOT

   95 AddOp: PLUS
   96      | MINUS

   97 MulOp: TIMES
   98      | DIVIDE
   99      | MOD

  100 RelOp: LT
  101      | GT
  102      | LE
  103      | GE

  104 EqOp: EQ
  105     | NE


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 5 6 25 26 27 31 36 37
    ')' (41) 5 6 25 26 27 31 36 37
    ',' (44) 8 10 12 14 54 56 60 71 72 75 76 80 82 85
    ';' (59) 7 8 9 10 11 12 13 14 19 20 21 22 23 28 29 52 68
    '=' (61) 9 10 13 14 21 53 54 55 56 70 72 74 76
    '[' (91) 86 87 88 89
    ']' (93) 86 87 88 89
    '{' (123) 17 18 58 78
    '}' (125) 17 18 58 78
    error (256)
    INT (258) 15 90
    RETURN (259) 19 20
    CONST (260) 52
    IF (261) 25 26
    ELSE (262) 26
    WHILE (263) 27
    FOR (264)
    BREAK (265) 28
    CONTINUE (266) 29
    VOID (267) 16
    INT_CONST <int_val> (268) 91
    PLUS <char_val> (269) 92 95
    MINUS <char_val> (270) 93 96
    NOT <char_val> (271) 94
    TIMES <char_val> (272) 97
    DIVIDE <char_val> (273) 98
    MOD <char_val> (274) 99
    IDENT <str_val> (275) 3 4 36 37 53 54 55 56 66 67 69 70 71 72 73 74 75 76 83
    LT <str_val> (276) 100
    GT <str_val> (277) 101
    LE <str_val> (278) 102
    GE <str_val> (279) 103
    EQ <str_val> (280) 104
    NE <str_val> (281) 105
    AND <str_val> (282) 47
    OR <str_val> (283) 49


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    CompUnit (39)
        on left: 1 2 3 4
        on right: 0 2 4
    RestCompUnit <ast_val> (40)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 3 4
    FuncType <ast_val> (41)
        on left: 15 16
        on right: 3 4
    Block <ast_val> (42)
        on left: 17 18
        on right: 5 6 24
    Stmt <ast_val> (43)
        on left: 19 20 21 22 23 24 25 26 27 28 29
        on right: 25 26 27 63 65
    Exp <ast_val> (44)
        on left: 30
        on right: 19 21 22 25 26 27 31 61 77 84 85 88 89
    PrimaryExp <ast_val> (45)
        on left: 31 32 33
        on right: 34
    UnaryExp <ast_val> (46)
        on left: 34 35 36 37
        on right: 35 38 39
    MulExp <ast_val> (47)
        on left: 38 39
        on right: 39 40 41
    AddExp <ast_val> (48)
        on left: 40 41
        on right: 41 42 43
    RelExp <ast_val> (49)
        on left: 42 43
        on right: 43 44 45
    EqExp <ast_val> (50)
        on left: 44 45
        on right: 45 46 47
    LAndExp <ast_val> (51)
        on left: 46 47
        on right: 47 48 49
    LOrExp <ast_val> (52)
        on left: 48 49
        on right: 30 49
    Decl <ast_val> (53)
        on left: 50 51
        on right: 62 64
    ConstDecl <ast_val> (54)
        on left: 52
        on right: 1 2 50
    ConstDef <ast_val> (55)
        on left: 53 54 55 56
        on right: 52 54 56
    ConstInitVal <ast_val> (56)
        on left: 57 58
        on right: 53 54 55 56 59 60
    ConstInitVals <ast_val> (57)
        on left: 59 60
        on right: 58 60
    ConstExp <ast_val> (58)
        on left: 61
        on right: 57 86 87
    BlockItem <ast_val> (59)
        on left: 62 63 64 65
        on right: 17 64 65
    LVal <ast_val> (60)
        on left: 66 67
        on right: 21 32
    VarDecl <ast_val> (61)
        on left: 68
        on right: 51
    VarDef <ast_val> (62)
        on left: 69 70 71 72 73 74 75 76
        on right: 8 10 12 14 68 71 72 75 76
    InitVal <ast_val> (63)
        on left: 77 78
        on right: 9 10 13 14 70 72 74 76 79 80
    InitVals <ast_val> (64)
        on left: 79 80
        on right: 78 80
    FuncFParams <ast_val> (65)
        on left: 81 82
        on right: 6 82
    FuncFParam <ast_val> (66)
        on left: 83
        on right: 81 82
    FuncRParams <ast_val> (67)
        on left: 84 85
        on right: 37 85
    ConstArray <ast_val> (68)
        on left: 86 87
        on right: 11 12 13 14 55 56 73 74 75 76 87
    Array <ast_val> (69)
        on left: 88 89
        on right: 67 89
    BType <ast_val> (70)
        on left: 90
        on right: 52 68 83
    Number <int_val> (71)
        on left: 91
        on right: 33
    UnaryOp <char_val> (72)
        on left: 92 93 94
        on right: 35
    AddOp <char_val> (73)
        on left: 95 96
        on right: 41
    MulOp <char_val> (74)
        on left: 97 98 99
        on right: 39
    RelOp <str_val> (75)
        on left: 100 101 102 103
        on right: 43
    EqOp <str_val> (76)
        on left: 104 105
        on right: 45


State 0

    0 $accept: . CompUnit $end

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    CompUnit   go to state 4
    FuncType   go to state 5
    ConstDecl  go to state 6


State 1

   15 FuncType: INT .

    $default  reduce using rule 15 (FuncType)


State 2

   52 ConstDecl: CONST . BType ConstDef ';'

    INT  shift, and go to state 7

    BType  go to state 8


State 3

   16 FuncType: VOID .

    $default  reduce using rule 16 (FuncType)


State 4

    0 $accept: CompUnit . $end

    $end  shift, and go to state 9


State 5

    3 CompUnit: FuncType . IDENT RestCompUnit
    4         | FuncType . IDENT RestCompUnit CompUnit

    IDENT  shift, and go to state 10


State 6

    1 CompUnit: ConstDecl .
    2         | ConstDecl . CompUnit

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (CompUnit)

    CompUnit   go to state 11
    FuncType   go to state 5
    ConstDecl  go to state 6


State 7

   90 BType: INT .

    $default  reduce using rule 90 (BType)


State 8

   52 ConstDecl: CONST BType . ConstDef ';'

    IDENT  shift, and go to state 12

    ConstDef  go to state 13


State 9

    0 $accept: CompUnit $end .

    $default  accept


State 10

    3 CompUnit: FuncType IDENT . RestCompUnit
    4         | FuncType IDENT . RestCompUnit CompUnit

    '('  shift, and go to state 14
    ';'  shift, and go to state 15
    ','  shift, and go to state 16
    '='  shift, and go to state 17
    '['  shift, and go to state 18

    RestCompUnit  go to state 19
    ConstArray    go to state 20


State 11

    2 CompUnit: ConstDecl CompUnit .

    $default  reduce using rule 2 (CompUnit)


State 12

   53 ConstDef: IDENT . '=' ConstInitVal
   54         | IDENT . '=' ConstInitVal ',' ConstDef
   55         | IDENT . ConstArray '=' ConstInitVal
   56         | IDENT . ConstArray '=' ConstInitVal ',' ConstDef

    '='  shift, and go to state 21
    '['  shift, and go to state 18

    ConstArray  go to state 22


State 13

   52 ConstDecl: CONST BType ConstDef . ';'

    ';'  shift, and go to state 23


State 14

    5 RestCompUnit: '(' . ')' Block
    6             | '(' . FuncFParams ')' Block

    INT  shift, and go to state 7
    ')'  shift, and go to state 24

    FuncFParams  go to state 25
    FuncFParam   go to state 26
    BType        go to state 27


State 15

    7 RestCompUnit: ';' .

    $default  reduce using rule 7 (RestCompUnit)


State 16

    8 RestCompUnit: ',' . VarDef ';'

    IDENT  shift, and go to state 28

    VarDef  go to state 29


State 17

    9 RestCompUnit: '=' . InitVal ';'
   10             | '=' . InitVal ',' VarDef ';'

    INT_CONST  shift, and go to state 30
    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    NOT        shift, and go to state 33
    IDENT      shift, and go to state 34
    '('        shift, and go to state 35
    '{'        shift, and go to state 36

    Exp         go to state 37
    PrimaryExp  go to state 38
    UnaryExp    go to state 39
    MulExp      go to state 40
    AddExp      go to state 41
    RelExp      go to state 42
    EqExp       go to state 43
    LAndExp     go to state 44
    LOrExp      go to state 45
    LVal        go to state 46
    InitVal     go to state 47
    Number      go to state 48
    UnaryOp     go to state 49


State 18

   86 ConstArray: '[' . ConstExp ']'
   87           | '[' . ConstExp ']' ConstArray

    INT_CONST  shift, and go to state 30
    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    NOT        shift, and go to state 33
    IDENT      shift, and go to state 34
    '('        shift, and go to state 35

    Exp         go to state 50
    PrimaryExp  go to state 38
    UnaryExp    go to state 39
    MulExp      go to state 40
    AddExp      go to state 41
    RelExp      go to state 42
    EqExp       go to state 43
    LAndExp     go to state 44
    LOrExp      go to state 45
    ConstExp    go to state 51
    LVal        go to state 46
    Number      go to state 48
    UnaryOp     go to state 49


State 19

    3 CompUnit: FuncType IDENT RestCompUnit .
    4         | FuncType IDENT RestCompUnit . CompUnit

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 3 (CompUnit)

    CompUnit   go to state 52
    FuncType   go to state 5
    ConstDecl  go to state 6


State 20

   11 RestCompUnit: ConstArray . ';'
   12             | ConstArray . ',' VarDef ';'
   13             | ConstArray . '=' InitVal ';'
   14             | ConstArray . '=' InitVal ',' VarDef ';'

    ';'  shift, and go to state 53
    ','  shift, and go to state 54
    '='  shift, and go to state 55


State 21

   53 ConstDef: IDENT '=' . ConstInitVal
   54         | IDENT '=' . ConstInitVal ',' ConstDef
